# newgyo

./: .gitignore  README.md  build.gradle  docker-compose.yml  settings.gradle
newgyo-py/: .gitignore  Dockerfile  config.py  main.py  pyproject.toml  router.py  schemas.py  scraper.py  summary.py
newgyo-spring/: .dockerignore  Dockerfile  build.gradle
newgyo-spring/src/main/java/kr/co/newgyo/: NewgyoApplication.java
newgyo-spring/src/main/java/kr/co/newgyo/batch/: SummaryBatchConfig.java  (+4 more)
newgyo-spring/src/main/resources/: application.properties
newgyo-spring/src/main/resources/static/: index.html
newgyo-spring/src/main/resources/static/JS/: auth-guard.js  socket.js
newgyo-spring/src/main/resources/static/css/: article-detail.css  article.css  articleDetail.css  chatIcon.css  home.css
newgyo-spring/src/main/resources/static/js/: article.js  auth-guard.js  chatModal.js  join.js
newgyo-spring/src/main/resources/templates/: article-detail.html  article.html  articleDetail.html  chatIcon.html  header.html  home.html  kakao-callback.html  login.html
src/main/java/kr/co/newgyo/config/: WebSecurityConfig.java
src/main/java/kr/co/newgyo/controller/: loginController.java
src/main/java/kr/co/newgyo/jwt/: JwtUtil.java
src/main/java/kr/co/newgyo/security/: CustomUserDetails.java
src/main/resources/: application-local.properties  application.properties
src/main/resources/static/css/: common.css  login.css  theme.css
src/main/resources/templates/: article.html  home.html  join.html  login.html
src/test/java/kr/co/newgyo/: NewgyoApplicationTests.java
(+70 files in other folders)
