[project]
name = "newgyo-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.127.0",
    "openai>=2.14.0",
    "playwright>=1.57.0",
    "uvicorn>=0.39.0",
]

[dependency-groups]
dev = [
    "openai>=2.14.0",
]
